# hdp-sp1

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: prove.yml  test.yml
aggregator/: Cargo.toml
aggregator/src/: main.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
elf/: riscv32im-succinct-zkvm-elf
examples/: README.md
examples/compliance/: README.md
examples/compliance/compliance/: Cargo.toml
examples/compliance/compliance/src/: main.rs
examples/compliance/program/: Cargo.toml
examples/compliance/program/src/: main.rs
examples/simple/: README.md
examples/simple/program/: Cargo.toml
examples/simple/program/src/: main.rs
examples/simple/simple/: Cargo.toml
examples/simple/simple/src/: main.rs
hdp-macro/: Cargo.toml
hdp-macro/src/: lib.rs
hdp-sdk/: Cargo.toml
hdp-sdk/src/: lib.rs
hdp-verifier/: README.md  foundry.toml
hdp-verifier/script/: Counter.s.sol  DataProcessor.sol
hdp-verifier/src/: DataProcessor.sol
hdp-verifier/src/fixtures/: groth16-fixture.json
hdp-verifier/src/interfaces/: IAggregatorsFactory.sol  ISharpFactsAggregator.sol
hdp-verifier/test/: DataProcessor.t.sol
lib/: Cargo.toml  README.md
lib/src/: chain.rs  lib.rs  mmr.rs  mpt.rs  utils.rs
lib/src/memorizer/: header.rs  keys.rs  mod.rs  values.rs
lib/src/memorizer/account/: mod.rs  online.rs  zkvm.rs
lib/src/memorizer/cl_header/: mod.rs  online.rs  zkvm.rs
lib/src/memorizer/header/: mod.rs  online.rs  zkvm.rs
lib/src/memorizer/receipt/: mod.rs  online.rs  zkvm.rs
lib/src/memorizer/storage/: mod.rs  online.rs  zkvm.rs
lib/src/memorizer/transaction/: mod.rs  online.rs  zkvm.rs
lib/src/provider/: account.rs  cl_header.rs  header.rs  mod.rs  transaction.rs
module/: Cargo.toml
program/: Cargo.toml
program/src/: lib.rs  main.rs
program/src/memorizer/: header.rs  keys.rs  mmr.rs  mod.rs  values.rs
program/src/memorizer/account/: mod.rs  online.rs  zkvm.rs
program/src/memorizer/cl_header/: mod.rs  online.rs  zkvm.rs
program/src/memorizer/header/: mod.rs  online.rs  zkvm.rs
program/src/memorizer/storage/: mod.rs  online.rs  zkvm.rs
program/src/memorizer/transaction/: mod.rs  online.rs  zkvm.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
sdk/: Cargo.toml
