[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1.0.0"
bincode = "1.3.3"
serde = "1.0.210"
alloy-sol-types = "0.8.6"
alloy-primitives = { version = "0.8.6", features = ["serde"] }
alloy-consensus = "0.4.2"
alloy-rpc-client = "0.4.2"
alloy-eips = "0.4.2"
alloy-rpc-types = "0.4.2"
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
url = { version = "2.5.2", features = ["serde"] }
bootloader-program = { path = "./program" }
thiserror-no-std = "2.0.2"