[workspace]
members = ["lib", "program", "script", "sdk"]
resolver = "2"

[workspace.dependencies]
bootloader-program = { path = "./program" }
hdp-lib = { path = "./lib" }
hdp-sdk = { path = "./sdk" }

cfg-if = "1.0.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
alloy-sol-types = "0.8.6"
alloy-primitives = { version = "0.8.6", features = ["serde"] }
alloy-consensus = "0.4.2"
alloy-rpc-client = "0.4.2"
alloy-eips = "0.4.2"
alloy-rpc-types = "0.4.2"
alloy-trie = { version = "0.6.0" }
reqwest = { version = "0.12", features = ["json"] }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
url = { version = "2.5.2", features = ["serde"] }
thiserror-no-std = "2.0.2"
