[package]
name = "hdp-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
bincode = { workspace = true }
hdp-lib = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
erased-serde = "0.4"
serde_json = "1.0"

[lints]
workspace = true
