[package]
name = "hdp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-trie = { workspace = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
sp1-zkvm = { workspace = true }
ssz_rs = { workspace = true }
thiserror-no-std = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
thiserror-no-std = { workspace = true }
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-trie = { workspace = true }
reqwest = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
eth-trie-proofs = { workspace = true }

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }

[dev-dependencies]
tempdir = "0.3"
