[package]
name = "hdp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-sol-types = { workspace = true }
alloy-trie = { workspace = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sp1-zkvm = { workspace = true }
ssz_rs = { workspace = true }
thiserror-no-std = { workspace = true }
url = { workspace = true }
scraper = "0.13"
regex = "1"

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
thiserror-no-std = { workspace = true }
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-trie = { workspace = true }
reqwest = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
eth-trie-proofs = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tempdir = "0.3"
