[package]
version = "0.1.0"
name = "bootloader-program"
edition = "2021"

[dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
hdp-lib = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = "0.10.8"
sp1-zkvm = { version = "2.0.0", features = ["verify"] }
thiserror-no-std = { workspace = true }
url = { workspace = true, features = ["serde"] }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
reqwest = { workspace = true }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tempdir = "0.3"
