[package]
version = "0.1.0"
name = "bootloader-program"
edition = "2021"

[dependencies]
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types = { workspace = true }
alloy-rpc-types = { workspace = true }
serde_with = "3.11.0"
bincode = { workspace = true }
cfg-if = { workspace = true }
hdp-lib = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = "0.10.8"
sp1-zkvm = { version = "2.0.0", features = ["verify"] }
thiserror-no-std = { workspace = true }
url = { workspace = true, features = ["serde"] }
alloy-trie = { workspace = true }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs.git", features = ["serde"] }
scraper = "0.13"
regex = "1"

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }
alloy-consensus = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
reqwest = { workspace = true }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
tokio = { version = "1.40.0", features = ["full"] }
serde_with = "3.11.0"

[dev-dependencies]
tempdir = "0.3"
