[package]
version = "0.1.0"
name = "bootloader-program"
edition = "2021"

[dependencies]
cfg-if = { workspace = true }
hdp-lib = { workspace = true }
hdp-macro = { workspace = true }
sp1-zkvm = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
bincode = { workspace = true }
url = { workspace = true }
once_cell = "1.20.2"
