[package]
version = "0.1.0"
name = "bootloader-script"
edition = "2021"
default-run = "bootloader"

[[bin]]
name = "bootloader"
path = "src/bin/main.rs"

[dependencies]
hdp-lib = { workspace = true }

bincode = { workspace = true }
sp1-sdk = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }


[build-dependencies]
sp1-helper = "2.0.0"
