[package]
name = "compliance-program"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
hdp-lib = { path = "../../../lib" }
hdp-macro = { path = "../../../hdp-macro" }
sp1-zkvm = { version = "2.0.0", features = ["verify"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
bincode = "1.3.3"
url = { version = "2.5.2", features = ["serde"] }
once_cell = "1.20.2"

[lints]
workspace = true
